apps/rollouts-poc/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-poc-stable
  namespace: rollouts-poc
  labels:
    app: rollouts-poc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: rollouts-poc
