apps/rollouts-poc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-poc-stable
  namespace: rollouts-poc
spec:
  ingressClassName: nginx
  rules:
  - host: rollouts-poc.vidp-mgmt-00-test-euc1.test0.shared.vidp.dev.euc1.vonagenetworks.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollouts-poc-stable
            port:
              number: 8080
